--- a/lib/lang/translations.json
+++ b/lib/lang/translations.json
@@ -44,5 +44,51 @@
     "join_call": "Join Call",
     "join_leave_call": "Join/Leave Call",
     "leave_room": "Leave Room"
-  }
+  },
+  
+  "de": {
+    "save_success_title": "Speichern erfolgreich",
+    "save_fail_title": "Speichern fehlgeschlagen",
+    "save_success": "Das Projekt wurde erfolgreich gespeichert.",
+    "save_fail": "Beim Speichern des Projekts ist ein Fehler aufgetreten.<br>Bitte wählen Sie eine andere Methode.",
+    "deploy_title": "Webseite implementiert",
+    "deploy_fail_title": "Implementieren fehlgeschlagen",
+    "deploy_success":"Die Webseite kann aufgerufen werden unter <br><a target=\"_blank\" href=\"{{{url}}}\">{{{url}}}</a>",
+    "lost_connection": "Die Verbindung zu \"{{nickname}}\" ist abgebrochen.",
+    "history_item": "Multihack Raum {{room}}",
+    "server": "Server",
+    "you": "Sie",
+    "optional": "Optional",
+    "cancel": "Abbrechen",
+    "skip": "Überspringen",
+    "join": "Beitreten",
+    "close": "Schließen",
+    "deploy": "Implementieren",
+    "continue": "Fortsetzen",
+    "save": "Speichern",
+    "name": "Name",
+    "upload": "Upload",
+    "room": "Raum",
+    "file": "Datei",
+    "folder": "Ordner",
+    "delete": "Löschen",
+    "talk": "Sprechen",
+    "new_file": "Neue Datei",
+    "new_folder": "Neuer Ordner",
+    "nickname_prompt_title": "Nicknamen auswählen",
+    "nickname_prompt": "Gib einen Nicknamen ein, damit dein Team dich erkennt.",
+    "nickname_placeholder": "Nickname",
+    "default_nickname": "Gast",
+    "choose_room_title": "Raum beitreten",
+    "choose_room_prompt": "Gib die ID des Raumes ein, dem du beitreten möchtest.",
+    "room_placeholder": "Raum ID",
+    "create_title": "Datei/Ordner erstellen",
+    "load_title": "Projekt laden",
+    "load_prompt": "ZIP Datei hochladen.",
+    "offline_title": "Offline Modus",
+    "offline_alert": "Du bist nun im Offline Modus. <br>Speichere und lade erneut, um einem Raum beizutreten.",
+    "leave_call. ": "Konferenz verlassen",
+    "join_call": "Konferenz beitreten" ,
+    "join_leave_call": "Konferenz beitreten/verlassen",
+    "leave_room": "Raum verlassen"
 }
