Added Bosnian locale.

--- a/lib/lang/translations.json
+++ b/lib/lang/translations.json
@@ -90,5 +90,51 @@
     "join_call": "Konferenz beitreten" ,
     "join_leave_call": "Konferenz beitreten/verlassen",
     "leave_room": "Raum verlassen"
+  },
+    "bs": {
+    "save_success_title": "Sačuvano",
+    "save_fail_title": "Nije sačuvano",
+    "save_success": "Vaš projekat je uspješno sačuvan.",
+    "save_fail": "Projekat nije sačuvan jer je došlo do greške.<br>Molimo izaberite drigačiji metod.",
+    "deploy_title": "Websajt pripremljen",
+    "deploy_fail_title": "Neuspješno piripremanje",
+    "deploy_success": "Bilo ko može da posjeti Vaš websajt na<br><a target=\"_blank\" href=\"{{{url}}}\">{{{url}}}</a>",
+    "lost_connection": "Vaša veza sa korisnikom \"{{nickname}}\" je izgubljena.",
+    "history_item": "Multihack soba {{room}}",
+    "server": "Server",
+    "you": "Vi",
+    "optional": "Opcionalno",
+    "cancel": "Otkaži",
+    "skip": "Preskoči",
+    "join": "Pridruži se",
+    "close": "Zatvori",
+    "deploy": "Pripremi",
+    "continue": "Nastavi",
+    "save": "Sačuvaj",
+    "name": "Ime",
+    "upload": "Pošalji",
+    "room": "Soba",
+    "file": "Fajl",
+    "folder": "Folder",
+    "delete": "Izbriši",
+    "talk": "Razgovor",
+    "new_file": "Novi fajl",
+    "new_folder": "Novi Folder",
+    "nickname_prompt_title": "Izaberi nadimak",
+    "nickname_prompt": "Upišite svoj nadimak tako da Vaš tim zna ko ste.",
+    "nickname_placeholder": "Nadimak",
+    "default_nickname": "Gost",
+    "choose_room_title": "Pridruži se sobi",
+    "choose_room_prompt": "Unesite ID sobe kojoj se želite pridružiti.",
+    "room_placeholder": "ID sobe",
+    "create_title": "Kreiraj Fajl/Folder",
+    "load_title": "Učitaj Projekat",
+    "load_prompt": "Pošalji ZIP fajl.",
+    "offline_title": "Izvanmrežni način",
+    "offline_alert": "Sada ste u izvanmrežnom načinu rada.<br>Sačuvajte i osvježite projekat da se ponovo pridružite sobi.",
+    "leave_call": "Otkaži poziv",
+    "join_call": "Prihvati poziv",
+    "join_leave_call": "Prihvati/Otkaži poziv",
+    "leave_room": "Napusti sobu"
   }
 }
