--- a/lib/lang/translations.json
+++ b/lib/lang/translations.json
@@ -49,14 +49,14 @@
     "save_success_title": "Speichern erfolgreich",
     "save_fail_title": "Speichern fehlgeschlagen",
     "save_success": "Das Projekt wurde erfolgreich gespeichert.",
-    "save_fail": "Beim Speichern des Projekts ist ein Fehler aufgetreten.<br>Bitte wählen Sie eine andere Methode.",
+    "save_fail": "Beim Speichern des Projekts ist ein Fehler aufgetreten.<br>Bitte wähle eine andere Methode.",
     "deploy_title": "Webseite implementiert",
     "deploy_fail_title": "Implementieren fehlgeschlagen",
     "deploy_success":"Die Webseite kann aufgerufen werden unter <br><a target=\"_blank\" href=\"{{{url}}}\">{{{url}}}</a>",
     "lost_connection": "Die Verbindung zu \"{{nickname}}\" ist abgebrochen.",
     "history_item": "Multihack Raum {{room}}",
     "server": "Server",
-    "you": "Sie",
+    "you": "Du",
     "optional": "Optional",
     "cancel": "Abbrechen",
     "skip": "Überspringen",
