--- a/lib/lang/translations.json
+++ b/lib/lang/translations.json
@@ -136,5 +136,51 @@
     "join_call": "Prihvati poziv",
     "join_leave_call": "Prihvati/Otkaži poziv",
     "leave_room": "Napusti sobu"
+  },
+  "pl": {
+    "save_success_title": "Zapis zakończony",
+    "save_fail_title": "Zapis nieudany",
+    "save_success": "Twój projekt został pomyślnie zapisany.",
+    "save_fail": "Wystąpił błąd poczad próby zapisania Twojego projektu. <br> Spóbuj zapisać w inny sposób",
+    "deploy_title": "Twoja strona została wrzucona",
+    "deploy_fail_title": "Niepowodzenie",
+    "deploy_success": "Każdy może obejrzeć Twoją stronę na br><a target=\"_blank\" href=\"{{{url}}}\">{{{url}}}</a>",
+    "lost_connection": "Straciłeś połączenie z  \"{{nickname}}\"",
+    "history_item": "Pokój Multihack {{room}}",
+    "server": "Serwer",
+    "you": "Ty",
+    "optional": "Opcjonalne",
+    "cancel": "Anuluj",
+    "skip": "Pomiń",
+    "join": "Dołącz",
+    "close": "Zamknij",
+    "deploy": "Wrzuć",
+    "continue": "Kontynuuj",
+    "save": "Zapisz",
+    "name": "Nazwa",
+    "upload": "Wrzuć",
+    "room": "Pokój",
+    "file": "Plik",
+    "folder": "Folder",
+    "delete": "Usuń",
+    "talk": "Rozmowa",
+    "new_file": "Nowy plik",
+    "new_folder": "Nowy Folder",
+    "nickname_prompt_title": "Wybierz nazwę użytkownika",
+    "nickname_prompt": "Wpisz swoją nazwę użytkownika, by współpracownicy wiedzieli kim jesteś",
+    "nickname_placeholder": "Nazwa użytkownika",
+    "default_nickname": "Gość",
+    "choose_room_title": "Dołącz do pokoju",
+    "choose_room_prompt": "Wprowadź identyfikator pokoju do którego chcesz dołączyć",
+    "room_placeholder": "Identyfikator pokoju",
+    "create_title": "Stwórz Plik/Folder",
+    "load_title": "Załaduj projekt",
+    "load_prompt": "Wrzuć plik ZIP",
+    "offline_title": "Tryb offline",
+    "offline_alert": "Jesteś teraz w trybie offline.<br>Zapisz i odświerz aby dołączyć do nowego pokoju",
+    "leave_call": "Opuść rozmowę",
+    "join_call": "Dołącz do rozmowy",
+    "join_leave_call": "Opuść bądź dołącz do rozmowy",
+    "leave_room": "Opuść pokój"
   }
 }
