Fix typo in pl translations

--- a/lib/lang/translations.json
+++ b/lib/lang/translations.json
@@ -144,7 +144,7 @@
     "save_fail": "Wystąpił błąd poczad próby zapisania Twojego projektu. <br> Spóbuj zapisać w inny sposób",
     "deploy_title": "Twoja strona została wrzucona",
     "deploy_fail_title": "Niepowodzenie",
-    "deploy_success": "Każdy może obejrzeć Twoją stronę na br><a target=\"_blank\" href=\"{{{url}}}\">{{{url}}}</a>",
+    "deploy_success": "Każdy może obejrzeć Twoją stronę na <br><a target=\"_blank\" href=\"{{{url}}}\">{{{url}}}</a>",
     "lost_connection": "Straciłeś połączenie z  \"{{nickname}}\"",
     "history_item": "Pokój Multihack {{room}}",
     "server": "Serwer",
@@ -177,7 +177,7 @@
     "load_title": "Załaduj projekt",
     "load_prompt": "Wrzuć plik ZIP",
     "offline_title": "Tryb offline",
-    "offline_alert": "Jesteś teraz w trybie offline.<br>Zapisz i odświerz aby dołączyć do nowego pokoju",
+    "offline_alert": "Jesteś teraz w trybie offline.<br>Zapisz i odśwież aby dołączyć do nowego pokoju",
     "leave_call": "Opuść rozmowę",
     "join_call": "Dołącz do rozmowy",
     "join_leave_call": "Opuść bądź dołącz do rozmowy",
